--- a/sshProxy/config.json
+++ b/sshProxy/config.json
@@ -4,6 +4,11 @@
  "backendBy" : "pass",
  "servidores":{
   "1234":"IP2:22",
+  "1234":"IP2:22",
+  "1234":"IP2:22",
+  "1234":"IP2:22",
+  "1234":"IP2:22",
+  "vps05":"64.176.17.11:22",
   "5678":"IP3:22"
  }
 }
