--- a/sshProxy/config.json
+++ b/sshProxy/config.json
@@ -3,12 +3,12 @@
  "mode": "ssh",
  "backendBy" : "pass",
  "servidores":{
-  "1234":"IP2:22",
-  "1234":"IP2:22",
-  "1234":"IP2:22",
-  "1234":"IP2:22",
-  "1234":"IP2:22",
-  "vps05":"64.176.17.11:22",
-  "5678":"IP3:22"
+  "vps01":"IP1:22",
+  "vps02":"IP2:22",
+  "vps03":"IP3:22",
+  "vps04":"IP4:22",
+  "vps05":"IP5:22",
+  "vps06":"IP6",
+  "vps07":"IP7:22"
  }
 }
